--- a/02-Python Crash Course Exercises.ipynb
+++ b/02-Python Crash Course Exercises.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +40,12 @@
        "2401"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "7**4"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -63,31 +61,29 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "s = \"Hi there Sam!\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hi', 'there', 'Sam!']"
+       "['Hi', 'there', 'dad!']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "s.split()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -105,8 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "planet = \"Earth\"\n",
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,9 +124,7 @@
      ]
     }
    ],
-   "source": [
-    "print('The diameter of {} is {} kilometers.'.format(planet,diameter))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -139,8 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
@@ -148,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +155,12 @@
        "'hello'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "lst[3][1][2][0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +189,12 @@
        "'hello'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "d['k1'][3]['tricky'][3]['target'][3]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -233,17 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "def domainGet(email):\n",
-    "    return email.split('@')[-1]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +245,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,10 +268,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def findDog(st):\n",
-    "    return 'dog' in st.lower().split()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -464,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
